# shollu-modern

./: .gitattributes  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.en.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  release.yml
design-system/: .thumbnail  README.md  SKILL.md  colors_and_type.css
design-system/preview/: colors-neutral.html  colors-primary.html  colors-themes.html  components-badges.html  components-buttons.html  components-inputs.html  components-nav.html  components-prayer-card.html  spacing-tokens.html  type-scale.html  type-specimens.html
docs/: ROADMAP.md  UI_HANDOFF.md  code-signing.md  courtesy-outreach.md  data-formats.md  module-survey.md  original-license.txt  prayer-time-algorithm.md  ui-design.md  walkthrough.md
src/: App.css  App.tsx  helpers.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Languages/: Aceh.slp  Banyumasan.slp  Basa Sunda.slp  Boso Jowo.slp  English.slp  Indonesia.slp  Palembang.slp
src-tauri/capabilities/: default.json
src-tauri/placenames/: ID.SPN
src-tauri/src/: astro.rs  audio.rs  hijri.rs  i18n.rs  lib.rs  main.rs  places.rs  prayer_times.rs  qibla.rs  scheduler.rs  settings.rs
src/components/: AboutPage.tsx  ConvertPage.tsx  DropZone.tsx  FloatingBar.tsx  Icons.tsx  LocationPage.tsx  MainPage.tsx  QiblaCompass.tsx  SchedulePage.tsx  SettingsPage.tsx  (+1 more)
(+5 files in other folders)
