[package]
name = "shollu-modern"
version = "0.1.0"
description = "Modern cross-platform Islamic prayer reminder. Based on Shollu by Ebta Setiawan (2004-2012)."
authors = ["Shollu Modern Contributors"]
license = "PolyForm-Noncommercial-1.0.0"
edition = "2021"

[lib]
name = "shollu_modern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
